<resources>
    <string name="app_name">MineSeeker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="main_menu_header">Main Menu</string>
    <string name="play_game_button">New Game!</string>
    <string name="options_button">Options</string>
    <string name="help_button">Help</string>
    <string name="welcome_activity_skip_txt">Skip</string>
    <string name="welcome_activity_message">Welcome\nto\nMine Seeker</string>
    <string name="erase_times_played_button">Erase Times Played</string>
    <string name="board_size">Board Size</string>
    <string name="settings">Settings</string>
    <string name="help_title">Help</string>
    <string name="mines"># Mines</string>
    <string name="save_changes">Save Changes</string>
    <string name="times_played">Times Played:</string>
    <string name="times_played_value">-</string>
    <string name="winning_message">Congratulations!!!\n You found all the zombies with %d scans</string>
    <string name="game_activity_scan_count">%d scans used</string>
    <string name="game_activity_mine_count">%d of %d zombies found.</string>
    <string name="continue_game">Continue Game</string>
</resources>